force-app/main/default/objects/Trekking_Event__c/Trekking_Event__c.object-meta.xml
<CustomObject>
    <label>Trekking Event</label>
    <nameField>
        <label>Trekking Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trekking Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>