force-app/main/default/objects/Trekking_Event__c/fields/Departure_From__c.field-meta.xml
<CustomField>
    <fullName>Departure_From__c</fullName>
    <label>Departure From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>