force-app/main/default/objects/Trekking_Event__c/fields/Event_Details_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Details_Link__c</fullName>
    <label>Event Details Link</label>
    <type>Url</type>
</CustomField>