force-app/main/default/objects/Trekking_Event__c/fields/Event_Key__c.field-meta.xml
<CustomField>
    <fullName>Event_Key__c</fullName>
    <label>Event Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>