force-app/main/default/objects/Trekking_Event__c/fields/Event_slot__c.field-meta.xml
<CustomField>
    <fullName>Event_slot__c</fullName>
    <label>Event slot</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>