force-app/main/default/objects/Trekking_Event__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trekking Events</relationshipLabel>
    <relationshipName>Trekking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>