force-app/main/default/objects/Trekking_Event__c/fields/Start_time__c.field-meta.xml
<CustomField>
    <fullName>Start_time__c</fullName>
    <label>Start time</label>
    <type>DateTime</type>
</CustomField>