force-app/main/default/objects/Trekking_Event__c/validationRules/End_Date_should_be_Greater_or_Equal.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_should_be_Greater_or_Equal</fullName>
    <active>true</active>
    <errorConditionFormula>Start_time__c   &gt;=  End_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Date should be greater than or equal to Start Date.</errorMessage>
</ValidationRule>